Changes for mobile

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,19 @@ node_modules
 build/.DS_Store
 public/.DS_Store
 .DS_Store
+build/asset-manifest.json
+build/favicon.ico
+build/index.html
+build/manifest.json
+build/precache-manifest.2905e444784a82f52b87aab4df9c573b.js
+build/robots.txt
+build/service-worker.js
+build/static/css/main.de1a7a5e.chunk.css
+build/static/css/main.de1a7a5e.chunk.css.map
+build/static/js/2.fb7eb9e6.chunk.js
+build/static/js/2.fb7eb9e6.chunk.js.LICENSE
+build/static/js/2.fb7eb9e6.chunk.js.map
+build/static/js/main.bd596d3c.chunk.js
+build/static/js/main.bd596d3c.chunk.js.map
+build/static/js/runtime-main.487003c9.js
+build/static/js/runtime-main.487003c9.js.map
