--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,13 @@ build/static/js/main.bd596d3c.chunk.js
 build/static/js/main.bd596d3c.chunk.js.map
 build/static/js/runtime-main.487003c9.js
 build/static/js/runtime-main.487003c9.js.map
+build/precache-manifest.962516bad2d04ec7644100bce5d66da2.js
+build/static/css/2.f42c2d1f.chunk.css
+build/static/css/2.f42c2d1f.chunk.css.map
+build/static/css/main.aa14e03b.chunk.css
+build/static/css/main.aa14e03b.chunk.css.map
+build/static/js/2.910df0bd.chunk.js
+build/static/js/2.910df0bd.chunk.js.LICENSE
+build/static/js/2.910df0bd.chunk.js.map
+build/static/js/main.8f332f7f.chunk.js
+build/static/js/main.8f332f7f.chunk.js.map
