Add description, tags, author and links

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ build/static/js/2.910df0bd.chunk.js.LICENSE
 build/static/js/2.910df0bd.chunk.js.map
 build/static/js/main.8f332f7f.chunk.js
 build/static/js/main.8f332f7f.chunk.js.map
+build/precache-manifest.022a889cedb01e5eebec7381ca2b4592.js
+build/static/css/2.735e5921.chunk.css
+build/static/css/2.735e5921.chunk.css.map
+build/static/css/main.aa2c1fde.chunk.css
+build/static/css/main.aa2c1fde.chunk.css.map
+build/static/js/2.e360d5f0.chunk.js
+build/static/js/2.e360d5f0.chunk.js.LICENSE
+build/static/js/2.e360d5f0.chunk.js.map
+build/static/js/main.c985a502.chunk.js
+build/static/js/main.c985a502.chunk.js.map
