Update readme and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,39 +2,4 @@ node_modules
 build/.DS_Store
 public/.DS_Store
 .DS_Store
-build/asset-manifest.json
-build/favicon.ico
-build/index.html
-build/manifest.json
-build/precache-manifest.2905e444784a82f52b87aab4df9c573b.js
-build/robots.txt
-build/service-worker.js
-build/static/css/main.de1a7a5e.chunk.css
-build/static/css/main.de1a7a5e.chunk.css.map
-build/static/js/2.fb7eb9e6.chunk.js
-build/static/js/2.fb7eb9e6.chunk.js.LICENSE
-build/static/js/2.fb7eb9e6.chunk.js.map
-build/static/js/main.bd596d3c.chunk.js
-build/static/js/main.bd596d3c.chunk.js.map
-build/static/js/runtime-main.487003c9.js
-build/static/js/runtime-main.487003c9.js.map
-build/precache-manifest.962516bad2d04ec7644100bce5d66da2.js
-build/static/css/2.f42c2d1f.chunk.css
-build/static/css/2.f42c2d1f.chunk.css.map
-build/static/css/main.aa14e03b.chunk.css
-build/static/css/main.aa14e03b.chunk.css.map
-build/static/js/2.910df0bd.chunk.js
-build/static/js/2.910df0bd.chunk.js.LICENSE
-build/static/js/2.910df0bd.chunk.js.map
-build/static/js/main.8f332f7f.chunk.js
-build/static/js/main.8f332f7f.chunk.js.map
-build/precache-manifest.022a889cedb01e5eebec7381ca2b4592.js
-build/static/css/2.735e5921.chunk.css
-build/static/css/2.735e5921.chunk.css.map
-build/static/css/main.aa2c1fde.chunk.css
-build/static/css/main.aa2c1fde.chunk.css.map
-build/static/js/2.e360d5f0.chunk.js
-build/static/js/2.e360d5f0.chunk.js.LICENSE
-build/static/js/2.e360d5f0.chunk.js.map
-build/static/js/main.c985a502.chunk.js
-build/static/js/main.c985a502.chunk.js.map
+build
